--- a/src/Home.css
+++ b/src/Home.css
@@ -1,9 +1,12 @@
-body{
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlXt0tTMtIVRt387d9W-bcALNTrmtyxvZvL_ghX8nUEzBx3wTp);
-    background-size: cover;
+.container{
+    background-image: url(https://s-media-cache-ak0.pinimg.com/originals/2d/f0/f6/2df0f68ddd3792fe916e0c7d317fa5f8.gif);
+    background-position-x: 70%;
+    background-position-y: 5%;
+    height: 1200px;
 }
 
 .logo{
     width: 100px;
     margin: 0 auto;
 }
+
