--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,4 @@
-.container{
+.home{
     background-image: url(https://s-media-cache-ak0.pinimg.com/originals/2d/f0/f6/2df0f68ddd3792fe916e0c7d317fa5f8.gif);
     background-position-x: 70%;
     background-position-y: 5%;
